--- a/src/picframe/config/configuration_example.yaml
+++ b/src/picframe/config/configuration_example.yaml
@@ -37,15 +37,16 @@ viewer:
   mat_resource_folder: "~/picframe_data/data/mat" # Folder containing mat image files
 
   show_clock: False                       # default=False, True shows clock overlay. False does not show clock overlay
-  clock_justify: "L"                      # default="R", clock justification L, C, or R
+  clock_justify: "R"                      # default="R", clock justification L, C, or R
   clock_text_sz: 120                      # default=120, clock character size
   clock_format: "%I:%M"                   # default="%I:%M", strftime format for clock string
   clock_opacity: 1.0                      # default=1.0 (0.0-1.0), alpha value of clock overlay
 
-  show_sensors: False                      # default=False, True shows sensors overlay. False does not show sensors overlay
+  show_sensors: True                      # default=False, True shows sensors overlay. False does not show sensors overlay
   sensors_justify: "L"                      # default="R", clock justification L, C, or R
   sensors_text_sz: 20                      # default=120, sensots character size
   sensors_opacity: 1.0                      # default=1.0 (0.0-1.0), alpha value of sensors overlay
+  sensors_update_rate_in_seconds: 60      # default=60, time in seconds to update sensors data
 
   menu_text_sz: 40                        # default=40, menu character size
   menu_autohide_tm: 10.0                  # default=10.0, time in seconds to show menu before auto hiding (0 disables auto hiding)
